--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script src="../db/supabase.js"></script>
-<script src="../js/produtos.js"></script>
+<!-- <script src="../js/produtos.js"></script> -->
 
 <script>
   (function setupProdutosUI(){
