--- a/html/index.html
+++ b/html/index.html
@@ -109,7 +109,7 @@
 
                 <div id="clientsList" class="client-grid"></div>
 
-                <div id="clientsPager" style="margin-top:12px;"></div>
+                <div id="clientsPagination" style="margin-top:12px;"></div>
 
                 <div class="muted" style="margin-top:12px;">
                     Selecionado: <span id="selectedLabel">Nenhum</span>
