--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Nota de Entrega</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <!-- Favicon inline SVG (não precisa de arquivos externos) -->
     <link rel="icon" type="image/svg+xml"
         href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='black' d='M5 16a3 3 0 1 0 2.83 4H17a3 3 0 1 0 0-2H12l3-7h3v4h2v-6h-6l-1.5-3H7v2h4l1 2-2.2 5H7.83A3 3 0 0 0 5 16Z'/%3E%3C/svg%3E">
@@ -13,7 +13,7 @@
 </head>
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<script src="../db/supabase.js"></script>
+<script src="db/supabase.js"></script>
 <!-- <script src="../js/produtos.js"></script> -->
 
 <script>
@@ -218,7 +218,7 @@
 
     </div>
 
-    <script src="../js/app.js"></script>
+    <script src="js/app.js"></script>
 
     <script>
 /* ====== Alteração: mudar títulos conforme ação (novo / editar / histórico) ====== */
