--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
 <body>
 
     <div class="wrap">
-        <h1>Clientes</h1>
+        <h1 class="top-fixed">Clientes</h1>
+
 
         <div class="app">
 
