--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 
     <div class="card" style="margin-bottom:12px;">
         <div style="display:flex; gap:8px; margin-bottom:12px;">
-            <input id="searchId" placeholder="ID" style="width:90px" list="s_searchId">
-            <input id="searchName" placeholder="Nome" style="flex:1" list="s_searchName">
+           <input id="searchId" placeholder="ID" style="width:90px">
+           <input id="searchName" placeholder="Nome" style="flex:1">
             <button id="btnNew" class="small-btn">Novo</button>
         </div>
     </div>
@@ -110,13 +110,7 @@
 
 <div class="app">
 
-
-                <div style="display:flex; gap:8px; margin-bottom:12px;">
-                    <input id="searchId" placeholder="ID" style="width:90px" list="s_searchId">
-                    <input id="searchName" placeholder="Nome" style="flex:1" list="s_searchName">
-                    <button id="btnNew" class="small-btn">Novo</button>
-                </div>
-
+               
                 <div id="clientsList" class="client-grid"></div>
 
                 <div id="clientsPagination" style="margin-top:12px;"></div>
